# devici-mcp

./: .gitignore  COMPREHENSIVE-THREAT-MODEL.md  DEPLOYMENT.md  Draft threat model_otm_report.json  LICENSE  OTM_VALIDATION.md  README.md  api_client.py  api_learning_demo.py  debug_server.py  demo_threat_model_creation.py  devici-mcp-security-assessment.md  devici-mcp-threat-model.otm  env.example  example_otm_report.json  otm_validator.py  pyproject.toml  sample_otm_import.py  server.py  simple_import.py  simple_test_server.py  test_basic.py  test_mcp_client.py  vendor_test.py  web-app-security-workflow.otm
src/devici_mcp_server/: __init__.py  __main__.py  api_client.py  server.py  server_enhanced.py
